--- a/index.html
+++ b/index.html
@@ -115,29 +115,6 @@
         </div>
       </div>
 
-      <!-- Kuning Langsat -->
-      <div class="bg-white p-6 rounded-xl shadow">
-        <h3 class="font-semibold text-xl mb-2">Kuning Langsat</h3>
-        <p class="text-sm mb-4">Cocok dengan warna: emerald, peach, ivory, maroon</p>
-        <div class="flex space-x-2">
-          <div class="w-12 h-12 bg-green-600 rounded"></div>
-          <div class="w-12 h-12 bg-orange-200 rounded"></div>
-          <div class="w-12 h-12 bg-amber-50 rounded"></div>
-          <div class="w-12 h-12 bg-red-900 rounded"></div>
-        </div>
-      </div>
-
-      <!-- Gelap -->
-      <div class="bg-white p-6 rounded-xl shadow">
-        <h3 class="font-semibold text-xl mb-2">Gelap</h3>
-        <p class="text-sm mb-4">Cocok dengan warna: gold, royal blue, white, burgundy</p>
-        <div class="flex space-x-2">
-          <div class="w-12 h-12 bg-yellow-400 rounded"></div>
-          <div class="w-12 h-12 bg-blue-700 rounded"></div>
-          <div class="w-12 h-12 bg-white border rounded"></div>
-          <div class="w-12 h-12 bg-red-800 rounded"></div>
-        </div>
-      </div>
     </div>
   </section>
 
@@ -149,23 +126,70 @@
     </div>
 
     <div class="max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8 p-8">
+
+      <!-- Vintage -->
       <div class="bg-white p-5 rounded-2xl shadow hover:scale-105 transition">
         <img src="https://i.pinimg.com/564x/6f/7a/d0/6f7ad046a1cf99c2aa3fa9370b2da81b.jpg" class="rounded-lg mb-3" alt="Vintage">
         <h3 class="text-xl font-semibold">Vintage</h3>
-        <p class="text-sm mt-1 text-gray-700">Gaya klasik dengan warna warm dan potongan retro.</p>
+        <p class="text-sm mt-1 text-gray-700">Gaya klasik dengan warna warm, retro, dan sentuhan nostalgia.</p>
       </div>
 
+      <!-- Streetwear -->
       <div class="bg-white p-5 rounded-2xl shadow hover:scale-105 transition">
         <img src="https://i.pinimg.com/564x/60/94/91/6094913b6b7b0b80768ac5f07091d985.jpg" class="rounded-lg mb-3" alt="Streetwear">
         <h3 class="text-xl font-semibold">Streetwear</h3>
-        <p class="text-sm mt-1 text-gray-700">Santai tapi keren, terinspirasi dari budaya jalanan dan hip-hop.</p>
+        <p class="text-sm mt-1 text-gray-700">Terinspirasi budaya jalanan: oversized, sneakers, hoodie, dan casual bold.</p>
       </div>
 
+      <!-- Minimalist -->
       <div class="bg-white p-5 rounded-2xl shadow hover:scale-105 transition">
         <img src="https://i.pinimg.com/564x/43/8d/77/438d77e33c49e92bcd8c06eb7e4a2b13.jpg" class="rounded-lg mb-3" alt="Minimalist">
         <h3 class="text-xl font-semibold">Minimalist</h3>
-        <p class="text-sm mt-1 text-gray-700">Gaya sederhana dengan warna netral dan potongan bersih.</p>
+        <p class="text-sm mt-1 text-gray-700">Gaya bersih, simple, warna netral, dan potongan rapi.</p>
       </div>
+
+      <!-- Y2K -->
+      <div class="bg-white p-5 rounded-2xl shadow hover:scale-105 transition">
+        <img src="https://i.pinimg.com/564x/4c/57/39/4c57396d88bdced21b5c7457f8687f72.jpg" class="rounded-lg mb-3" alt="Y2K">
+        <h3 class="text-xl font-semibold">Y2K</h3>
+        <p class="text-sm mt-1 text-gray-700">Trendi ala tahun 2000-an: crop top, low rise jeans, warna bold fun.</p>
+      </div>
+
+      <!-- Sporty -->
+      <div class="bg-white p-5 rounded-2xl shadow hover:scale-105 transition">
+        <img src="https://i.pinimg.com/564x/d4/47/ab/d447ab028a2a62c858d05c6c0daacd57.jpg" class="rounded-lg mb-3" alt="Sporty">
+        <h3 class="text-xl font-semibold">Sporty</h3>
+        <p class="text-sm mt-1 text-gray-700">Aktif dan energik: track jacket, jogger, running shoes.</p>
+      </div>
+
+      <!-- Casual -->
+      <div class="bg-white p-5 rounded-2xl shadow hover:scale-105 transition">
+        <img src="https://i.pinimg.com/736x/d0/bd/c8/d0bdc8a7fb296f91e719568b47a196d0.jpg" class="rounded-lg mb-3" alt="Casual">
+        <h3 class="text-xl font-semibold">Casual</h3>
+        <p class="text-sm mt-1 text-gray-700">Santai tapi rapi: jeans, t-shirt basic, cardigan, sneakers.</p>
+      </div>
+
+      <!-- Korean Look -->
+      <div class="bg-white p-5 rounded-2xl shadow hover:scale-105 transition">
+        <img src="https://i.pinimg.com/564x/ee/73/86/ee73866ac0903ad65379b3f9028a33cf.jpg" class="rounded-lg mb-3" alt="Korean">
+        <h3 class="text-xl font-semibold">Korean Look</h3>
+        <p class="text-sm mt-1 text-gray-700">Soft, cute, aesthetic: knitwear, pleated skirt, pastel tone.</p>
+      </div>
+
+      <!-- Boho -->
+      <div class="bg-white p-5 rounded-2xl shadow hover:scale-105 transition">
+        <img src="https://i.pinimg.com/564x/ae/c9/a9/aec9a9cd4435adbb2c2d6e7ca3bcab9a.jpg" class="rounded-lg mb-3" alt="Boho">
+        <h3 class="text-xl font-semibold">Boho</h3>
+        <p class="text-sm mt-1 text-gray-700">Etnik, flowy, earthy: dress longgar, aksesori kayu, warna natural.</p>
+      </div>
+
+      <!-- Romantic -->
+      <div class="bg-white p-5 rounded-2xl shadow hover:scale-105 transition">
+        <img src="https://i.pinimg.com/564x/6e/ca/31/6eca31c73774c53ae1fa5321f908db8e.jpg" class="rounded-lg mb-3" alt="Romantic">
+        <h3 class="text-xl font-semibold">Romantic</h3>
+        <p class="text-sm mt-1 text-gray-700">Lembut dan feminin: lace, ruffle, warna pastel, dress flowy.</p>
+      </div>
+
     </div>
   </section>
 
@@ -176,7 +200,7 @@
 
   <!-- =============== SCRIPT LOGIC =============== -->
   <script>
-    // Navigasi antar section
+    // Navigasi antar bagian
     $(".nav-btn").click(function () {
       const target = $(this).data("target");
       $(".section").addClass("hidden-section");
@@ -184,7 +208,7 @@
       window.scrollTo(0, 0);
     });
 
-    // AI Outfit Generator
+    // Outfit AI
     function getOutfit(gender, skinTone, occasion) {
       if (gender === "male" && skinTone === "sawo matang" && occasion === "kasual") {
         return {
