--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
   <!-- FOOTER -->
   <footer class="text-center text-sm py-8 text-gray-600">
-    <p>&copy; 2025 StyleMatch | Designed with ❤️ by LUNA & GPT-5</p>
+    <p>&copy; 2025 StyleMatch | Designed with ❤️ by LUNA, AUREL & GPT-5</p>
   </footer>
 
   <!-- SCRIPT LOGIC -->
