--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <!-- Hasil Rekomendasi -->
       <div id="result" class="mt-6 p-4 bg-pink-50 rounded-xl hidden">
         <h3 class="text-xl font-semibold text-pink-600">✨ Rekomendasi Kamu:</h3>
-        <p id="style" class="mt-2"></p>
+        <p id="styleResult" class="mt-2"></p>
         <p id="colors" class="mt-1"></p>
         <p id="outfit" class="mt-1"></p>
       </div>
@@ -91,6 +91,7 @@
     </div>
 
     <div class="max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8 p-8">
+      
       <!-- Sawo Matang -->
       <div class="bg-white p-6 rounded-xl shadow">
         <h3 class="font-semibold text-xl mb-2">Sawo Matang</h3>
@@ -138,6 +139,7 @@
           <div class="w-12 h-12 bg-red-800 rounded"></div>
         </div>
       </div>
+
     </div>
   </section>
 
@@ -152,65 +154,65 @@
 
       <!-- Vintage -->
       <div class="bg-white p-5 rounded-2xl shadow hover:scale-105 transition">
-        <img src="https://i.pinimg.com/564x/6f/7a/d0/6f7ad046a1cf99c2aa3fa9370b2da81b.jpg" class="rounded-lg mb-3" alt="Vintage">
+        <img src="https://i.pinimg.com/564x/6f/7a/d0/6f7ad046a1cf99c2aa3fa9370b2da81b.jpg" class="rounded-lg mb-3">
         <h3 class="text-xl font-semibold">Vintage</h3>
-        <p class="text-sm mt-1 text-gray-700">Gaya klasik dengan warna warm dan potongan retro.</p>
+        <p class="text-sm">Gaya klasik dengan warna warm dan potongan retro.</p>
       </div>
 
       <!-- Streetwear -->
       <div class="bg-white p-5 rounded-2xl shadow hover:scale-105 transition">
-        <img src="https://i.pinimg.com/564x/60/94/91/6094913b6b7b0b80768ac5f07091d985.jpg" class="rounded-lg mb-3" alt="Streetwear">
+        <img src="https://i.pinimg.com/564x/60/94/91/6094913b6b7b0b80768ac5f07091d985.jpg" class="rounded-lg mb-3">
         <h3 class="text-xl font-semibold">Streetwear</h3>
-        <p class="text-sm mt-1 text-gray-700">Santai, bold, oversized, sneakers, dan budaya jalanan.</p>
+        <p class="text-sm">Oversized, bold, sneakers, hype.</p>
       </div>
 
       <!-- Minimalist -->
       <div class="bg-white p-5 rounded-2xl shadow hover:scale-105 transition">
-        <img src="https://i.pinimg.com/564x/43/8d/77/438d77e33c49e92bcd8c06eb7e4a2b13.jpg" class="rounded-lg mb-3" alt="Minimalist">
+        <img src="https://i.pinimg.com/564x/43/8d/77/438d77e33c49e92bcd8c06eb7e4a2b13.jpg" class="rounded-lg mb-3">
         <h3 class="text-xl font-semibold">Minimalist</h3>
-        <p class="text-sm mt-1 text-gray-700">Gaya simpel, bersih, netral, dan elegan.</p>
+        <p class="text-sm">Simpel, netral, rapi, clean aesthetic.</p>
       </div>
 
       <!-- Y2K -->
       <div class="bg-white p-5 rounded-2xl shadow hover:scale-105 transition">
-        <img src="https://i.pinimg.com/564x/4c/57/39/4c57396d88bdced21b5c7457f8687f72.jpg" class="rounded-lg mb-3" alt="Y2K">
+        <img src="https://i.pinimg.com/564x/4c/57/39/4c57396d88bdced21b5c7457f8687f72.jpg" class="rounded-lg mb-3">
         <h3 class="text-xl font-semibold">Y2K</h3>
-        <p class="text-sm mt-1 text-gray-700">Crop top, low-rise jeans, warna bold, aesthetic ala 2000-an.</p>
+        <p class="text-sm">Low-rise jeans, crop top, aesthetic 2000-an.</p>
       </div>
 
       <!-- Sporty -->
       <div class="bg-white p-5 rounded-2xl shadow hover:scale-105 transition">
-        <img src="https://i.pinimg.com/564x/d4/47/ab/d447ab028a2a62c858d05c6c0daacd57.jpg" class="rounded-lg mb-3" alt="Sporty">
+        <img src="https://i.pinimg.com/564x/d4/47/ab/d447ab028a2a62c858d05c6c0daacd57.jpg" class="rounded-lg mb-3">
         <h3 class="text-xl font-semibold">Sporty</h3>
-        <p class="text-sm mt-1 text-gray-700">Gaya aktif: track jacket, jogger, sepatu lari.</p>
+        <p class="text-sm">Track jacket, jogger, sepatu lari.</p>
       </div>
 
       <!-- Casual -->
       <div class="bg-white p-5 rounded-2xl shadow hover:scale-105 transition">
-        <img src="https://i.pinimg.com/736x/d0/bd/c8/d0bdc8a7fb296f91e719568b47a196d0.jpg" class="rounded-lg mb-3" alt="Casual">
+        <img src="https://i.pinimg.com/736x/d0/bd/c8/d0bdc8a7fb296f91e719568b47a196d0.jpg" class="rounded-lg mb-3">
         <h3 class="text-xl font-semibold">Casual</h3>
-        <p class="text-sm mt-1 text-gray-700">T-shirt, jeans, cardigan, sneakers — santai & nyaman.</p>
+        <p class="text-sm">T-shirt, jeans, sneakers — simple & comfy.</p>
       </div>
 
       <!-- Korean Look -->
       <div class="bg-white p-5 rounded-2xl shadow hover:scale-105 transition">
-        <img src="https://i.pinimg.com/564x/ee/73/86/ee73866ac0903ad65379b3f9028a33cf.jpg" class="rounded-lg mb-3" alt="Korean Look">
+        <img src="https://i.pinimg.com/564x/ee/73/86/ee73866ac0903ad65379b3f9028a33cf.jpg" class="rounded-lg mb-3">
         <h3 class="text-xl font-semibold">Korean Look</h3>
-        <p class="text-sm mt-1 text-gray-700">Warna lembut, pleated skirt, knitwear — clean aesthetic.</p>
+        <p class="text-sm">Soft pastel, knitwear, pleated skirt.</p>
       </div>
 
       <!-- Boho -->
       <div class="bg-white p-5 rounded-2xl shadow hover:scale-105 transition">
-        <img src="https://i.pinimg.com/564x/ae/c9/a9/aec9a9cd4435adbb2c2d6e7ca3bcab9a.jpg" class="rounded-lg mb-3" alt="Boho">
+        <img src="https://i.pinimg.com/564x/ae/c9/a9/aec9a9cd4435adbb2c2d6e7ca3bcab9a.jpg" class="rounded-lg mb-3">
         <h3 class="text-xl font-semibold">Boho</h3>
-        <p class="text-sm mt-1 text-gray-700">Flowy dress, earthy color, aksesoris natural.</p>
+        <p class="text-sm">Flowy dress, earthy tones, natural vibe.</p>
       </div>
 
       <!-- Romantic -->
       <div class="bg-white p-5 rounded-2xl shadow hover:scale-105 transition">
-        <img src="https://i.pinimg.com/564x/6e/ca/31/6eca31c73774c53ae1fa5321f908db8e.jpg" class="rounded-lg mb-3" alt="Romantic">
+        <img src="https://i.pinimg.com/564x/6e/ca/31/6eca31c73774c53ae1fa5321f908db8e.jpg" class="rounded-lg mb-3">
         <h3 class="text-xl font-semibold">Romantic</h3>
-        <p class="text-sm mt-1 text-gray-700">Lace, ruffle, pastel — feminin & lembut.</p>
+        <p class="text-sm">Ruffle, lace, feminine pastel aesthetic.</p>
       </div>
 
     </div>
@@ -235,7 +237,7 @@
         return {
           style: "Casual Streetwear",
           colors: ["olive green", "cream", "denim"],
-          outfit: "Kaos oversized, jeans biru, sneakers putih, topi bucket"
+          outfit: "Kaos oversized, jeans biru, sneakers putih"
         };
       } else if (gender === "female" && skinTone === "putih" && occasion === "formal") {
         return {
@@ -247,19 +249,19 @@
         return {
           style: "Chic Casual",
           colors: ["pastel pink", "white", "denim"],
-          outfit: "Crop top, celana high-waist, sneakers putih, tas kecil"
+          outfit: "Crop top, high-waist jeans, sneakers putih"
         };
       } else if (gender === "male" && occasion === "formal") {
         return {
           style: "Smart Modern",
           colors: ["black", "grey", "white"],
-          outfit: "Kemeja polos, trousers fit, sepatu kulit, jam tangan elegan"
+          outfit: "Kemeja polos, trousers fit, sepatu kulit"
         };
       } else {
         return {
           style: "Universal Style",
           colors: ["white", "black", "grey"],
-          outfit: "Outfit netral yang cocok untuk semua warna kulit"
+          outfit: "Outfit netral cocok untuk semua warna kulit"
         };
       }
     }
@@ -275,7 +277,7 @@
       }
 
       const result = getOutfit(gender, skinTone, occasion);
-      $("#style").html(`👕 <strong>Gaya:</strong> ${result.style}`);
+      $("#styleResult").html(`👕 <strong>Gaya:</strong> ${result.style}`);
       $("#colors").html(`🎨 <strong>Warna cocok:</strong> ${result.colors.join(", ")}`);
       $("#outfit").html(`🧢 <strong>Outfit:</strong> ${result.outfit}`);
       $("#result").fadeIn();
